--- a/screen/App.config
+++ b/screen/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="L2Runner.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="screen.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,17 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <userSettings>
+        <L2Runner.Properties.Settings>
+            <setting name="RefreshTime" serializeAs="String">
+                <value>0.5</value>
+            </setting>
+            <setting name="LastWindow" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="mobhpBar" serializeAs="String">
+                <value>0, 0, 0, 0</value>
+            </setting>
+        </L2Runner.Properties.Settings>
         <screen.Properties.Settings>
             <setting name="RefreshTime" serializeAs="String">
                 <value>0.5</value>
