added keycodes and correct keyboard work

--- a/screen/App.config
+++ b/screen/App.config
@@ -20,6 +20,9 @@
             <setting name="mobhpBar" serializeAs="String">
                 <value>0, 0, 0, 0</value>
             </setting>
+            <setting name="filte_string" serializeAs="String">
+                <value>l2</value>
+            </setting>
         </L2Runner.Properties.Settings>
         <screen.Properties.Settings>
             <setting name="RefreshTime" serializeAs="String">
