--- a/screen/App.config
+++ b/screen/App.config
@@ -20,7 +20,7 @@
             <setting name="mobhpBar" serializeAs="String">
                 <value>0, 0, 0, 0</value>
             </setting>
-            <setting name="filte_string" serializeAs="String">
+            <setting name="filter_string" serializeAs="String">
                 <value>l2</value>
             </setting>
         </L2Runner.Properties.Settings>
