--- a/screen/Properties/Settings.settings
+++ b/screen/Properties/Settings.settings
@@ -11,7 +11,7 @@
     <Setting Name="mobhpBar" Type="System.Drawing.Rectangle" Scope="User">
       <Value Profile="(Default)">0, 0, 0, 0</Value>
     </Setting>
-    <Setting Name="filte_string" Type="System.String" Scope="User">
+    <Setting Name="filter_string" Type="System.String" Scope="User">
       <Value Profile="(Default)">l2</Value>
     </Setting>
   </Settings>
